# r2-ert

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/example_package_roryyeung/: __init__.py  example.py
src/r2_ert/: __init__.py
src/r2_ert/Structured_Foward_Survey/: StructuredFowardSurvey.py  __init__.py  generateStructuredFowardSurvey.py
src/r2_ert/helper_functions/: __init__.py  createProtocolFile.py  visualisePsudosection.py  visualiseResistivity.py
tests/: test_example.py
