[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "example-package-roryyeung"
version = "0.1.0"
description = "Example package scaffold for r2-ert."
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
authors = [{ name = "roryyeung" }]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
