[build-system]
requires = ["uv_build >= 0.11.7, <0.12.0"]
build-backend = "uv_build"

[project]
name = "r2-ert"
version = "0.0.1"
description = "A python wrapper around the R2 series of codes for the modelling of Electrical Resistivity Tomography in Geophysics."
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
authors = [{ name = "Rory Yeung", email="r.yeung1@lancaster.ac.uk" }]

[project.urls]
Homepage = "https://github.com/roryyeung/r2-ert"
Issues = "https://github.com/roryyeung/r2-ert/issues"

[tool.uv.build-backend]
module-name = "r2_ert"
